Обновить RecommendationService для динамических правил